# TD-BEM-Stability

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  EigenAnalysisT.cpp  EigenAnalysisT.h  GHReaderT.cpp  GHReaderT.h  main.cpp
test/: G1_step0.txt  G2_step0.txt  G2_step1.txt  H1_step1.txt  H2_step0.txt  H2_step1.txt
